--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang='en' id='scroll-root'>
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-
+    <title>{{ title }} - My Django Application</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
@@ -12,39 +11,39 @@
 </head>
 
 <body>
-    <figure>
-      <div id='logo-div'>
-        <img id='logo' src='/static/images/logo_300x225.png' alt='Logo' height='100' width='150'>
-      </div>
-    </figure>
-    
-    <header>
-      <div id='menu-toggle' class='menu'>
-        <div class='spinner-master'>
-          <input id='spinner-form' type='checkbox'>
-          <label class='spinner-spin' for='spinner-form'>
-            <span class='spinner diagonal part-1'></span>
-            <span class='spinner horizontal'></span>
-            <span class='spinner diagonal part-2'></span>
-          </label>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="/" class="navbar-brand">Application name</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                </ul>
+                {% include 'app/loginpartial.html' %}
+            </div>
         </div>
-      </div>
-      <nav id='menu-nav'>
-        <a href='{% url "home" %}'>Home</a>
-        <a href='{% url "products" %}'>Products</a>
-        <a href='{% url "gallery" %}'>Gallery</a>
-        <a href='{% url "contactus" %}'>Contact us</a>
-      </nav> 
-    </header>
+    </div>
 
-    {% block content %}{% endblock %}
+    <div class="container body-content">
+{% block content %}{% endblock %}
+        <hr/>
+        <footer>
+            <p>&copy; {{ year }} - My Django Application</p>
+        </footer>
+    </div>
 
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
-    {% block scripts %}{% endblock %}
-    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDzQo8GzJDN9M3XXkDfiq5wGXLepspzNmI&callback=initMap' async defer></script>
-    <script src="{% static 'app/scripts/scripts.js' %}"></script>
+{% block scripts %}{% endblock %}
 
 </body>
 </html>
