--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -40,3 +40,18 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+/*****************************************************************/
+
+.container-gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 6px;
+  }
+
+  .loader-img {
+    width: 100%;
+  }
+  
+  
