--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -53,5 +53,12 @@ input[type="checkbox"].input-validation-error {
   .loader-img {
     width: 100%;
   }
-  
-  
+
+input[name=message] {
+    width: 80%;
+}  
+
+.message_list th,td {
+    text-align: left;
+    padding-right: 15px;
+}
